Fixed alignment of partner gallery.

--- a/assets/css/style_original.css
+++ b/assets/css/style_original.css
@@ -1074,9 +1074,11 @@ a:focus, a:hover {
 }
 
 .portfolio-block {
+  display: block;
   position: relative;
   transition: .3s all;
   overflow: hidden;
+  vertical-align: middle;
 }
 
 .portfolio-block:before {
